--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
+    "@hookform/resolvers": "^3.1.0",
     "@testing-library/dom": "^9.2.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^14.0.0",
@@ -33,6 +34,7 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@types/testing-library__jest-dom": "^5.14.5",
+    "@types/yup": "^0.32.0",
     "@vitejs/plugin-react": "^4.0.0",
     "eslint": "^8.0.0",
     "eslint-config-react-app": "^7.0.1",
@@ -40,6 +42,7 @@
     "jsdom": "^21.1.0",
     "prettier": "^2.7.1",
     "prettier-config-nick": "^1.0.2",
+    "react-hook-form": "^7.44.3",
     "typescript": "^5.0.2",
     "vite": "^4.0.0",
     "vitest": "^0.30.1"
@@ -58,7 +61,7 @@
     }
   },
   "prettier": {
-    "printWidth": 100,
+    "printWidth": 120,
     "semi": true,
     "singleQuote": false
   }
