--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/resolvers": "^3.1.0",
     "@testing-library/dom": "^9.2.0",
     "@testing-library/jest-dom": "^5.11.4",
@@ -33,6 +36,7 @@
     "@testing-library/user-event": "^14.2.5",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/styled-components": "^5.1.26",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@types/yup": "^0.32.0",
     "@vitejs/plugin-react": "^4.0.0",
@@ -43,6 +47,7 @@
     "prettier": "^2.7.1",
     "prettier-config-nick": "^1.0.2",
     "react-hook-form": "^7.44.3",
+    "styled-components": "^5.3.11",
     "typescript": "^5.0.2",
     "vite": "^4.0.0",
     "vitest": "^0.30.1"
