--- a/package.json
+++ b/package.json
@@ -17,25 +17,27 @@
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@emotion/react": "^11.11.0",
-    "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.1.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.3",
-    "@hookform/resolvers": "^3.1.0",
-    "@radix-ui/react-popover": "1.0.6",
-    "@reduxjs/toolkit": "^1.8.1",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-popover": "1.0.6",
+    "@reduxjs/toolkit": "^1.8.1",
     "axios": "^1.4.0",
+    "fs-extra": "^11.1.1",
     "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.1",
-    "react-router-dom": "^6.11.2",
     "react-hook-form": "^7.44.3",
+    "react-redux": "^8.0.1",
+    "react-refresh": "^0.14.0",
+    "react-router-dom": "^6.11.2",
     "styled-components": "^5.3.11"
   },
   "devDependencies": {
