--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "styled-components": "^5.3.11"
   },
   "devDependencies": {
+    "@svgr/core": "^8.0.0",
+    "@svgr/webpack": "^8.0.1",
     "@testing-library/dom": "^9.2.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^14.0.0",
@@ -59,6 +61,7 @@
     "prettier-config-nick": "^1.0.2",
     "typescript": "^5.0.2",
     "vite": "^4.0.0",
+    "vite-plugin-svgr": "^3.2.0",
     "vitest": "^0.30.1"
   },
   "eslintConfig": {
