--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,7 @@
       "@/*": ["./src/*"]
     },
     "jsx": "react-jsx",
-
-    "types": ["testing-library__jest-dom"],
+    "types": ["testing-library__jest-dom"]
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }],
